<resources>
    <string name="app_name">Motion</string>
    <string name="postal_transition_name">postal_transition_name</string>
    <string name="motion">Motion</string>

    <string name="filter_popular">Popular</string>
    <string name="filter_top_rated">Top Rated</string>
    <string name="filter_fav">Favorite</string>
    <string name="loading">loading</string>

    <string name="retry">Retry</string>
    <string name="data_load_failed">failed to load data</string>
    <string name="data_load_empty">This dataset is empty</string>
    <string name="filter">Filter</string>
    <string name="title_txt">Motion - %s</string>

    <string name="trailers">Trailers</string>
    <string name="search_hint">Search Movie</string>

    <string name="review_author">Review By</string>
    <string name="review_content">Author\'s Review</string>
    <string name="ratings">Ratings Star</string>

    <string name="back_drp_img">Back Drop image of movie postal</string>
    <string name="ratings_txt">Ratings Value</string>
    <string name="trailer_header">Trailers</string>
    <string name="movie_description">Movie Description</string>
    <string name="trailer_content_description">Trailer from %s</string>

    <string name="trailers_load_failed">failed to load trailers</string>

    <string name="play_trailer">play trailer</string>
    <string name="search">Search</string>
    <string name="failed_to_load">Failed to load</string>

</resources>
