<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">


    <android.support.v7.widget.AppCompatTextView
        android:id="@id/release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/release_date_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/release_date_txt_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@id/rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/rating_txt_padding_right"
            android:contentDescription="@string/ratings"
            android:textColor="@color/white"
            android:textSize="@dimen/rating_txt_size" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:contentDescription="@string/ratings"
            android:numStars="@integer/star_number"
            android:paddingBottom="@dimen/rating_bar_padding"
            android:paddingTop="@dimen/rating_bar_padding"
            android:rating="@integer/rating"
            android:stepSize="@integer/step_size" />


    </LinearLayout>

    <uk.co.deanwild.flowtextview.FlowTextView
        android:id="@id/ftv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/movie_description">

        <android.support.v7.widget.AppCompatImageView
            android:id="@id/thumbnail"
            android:layout_width="@dimen/backdrop_img_width"
            android:layout_height="@dimen/backdrop_img_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/backdrop_img_right_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back_drp_img"
            android:scaleType="center" />

    </uk.co.deanwild.flowtextview.FlowTextView>


</android.support.v7.widget.LinearLayoutCompat>