<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context=".movieDetails.MovieDetailedActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@id/toolbar_layout"
            app:contentScrim="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@id/img_postal"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:transitionName="@string/postal_transition_name" />

            <android.support.v7.widget.Toolbar
                android:id="@id/toolbar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <include
                android:id="@id/contentItems"
                layout="@layout/content_movie_detailed_activty" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/trailers_header_left_margin">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/source_bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/trailer_header"
                    android:text="@string/trailers"
                    android:textColor="@color/white"
                    android:textSize="@dimen/trailers_txt_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/underline_height"
                    android:layout_marginTop="@dimen/underline_martin_top"
                    android:background="@color/underline" />

            </LinearLayout>

            <FrameLayout
                android:id="@id/trailers_and_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/review_frag_padding_bottom" />


        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>